--- a/3.0/clients.conf
+++ b/3.0/clients.conf
@@ -238,11 +238,14 @@ client localhost_ipv6 {
 #  When a client request comes in, the BEST match is chosen.
 #  i.e. The entry from the smallest possible network.
 #
-#client private-network-1 {
-#	ipaddr		= 192.0.2.0/24
-#	secret		= testing123-1
-#}
-
+client denis {
+	ipaddr		= 10.203.0.116/16
+	secret		= testing123
+}
+client ap {
+	ipaddr		= 192.168.1.20/24
+	secret		= testing123
+}
 #client private-network-2 {
 #	ipaddr		= 198.51.100.0/24
 #	secret		= testing123-2
